style.css
/* ... */
.header-sticky .is-sticky #masthead {
	z-index: 99 !important;
}
.header-sticky .is-sticky .header-bottom {
	background: #fff;
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

.transparent.header-sticky #masthead-sticky-wrapper {
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: 99;
}

.transparent.header-sticky #masthead {
	left: auto;
}

.transparent.header-sticky .header-top {
	display: none;
}

.transparent.header-sticky .header-bottom {
	background-color: transparent;
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.transparent.header-sticky #site-navigation .menu-toggle .fa,
.transparent.header-sticky #site-navigation ul li a,
.transparent.header-sticky .flash-cart-views a {
	color: #fff;
}


.transparent.header-sticky #site-navigation ul.sub-menu li a {
	color: #333333;
}

.transparent.header-sticky #site-navigation ul.sub-menu li a:hover {
	color: #30afb8;
}

.transparent.header-sticky .flash-cart-views {
	border-color: #fff;
}


.transparent.header-sticky .search-icon {
	color: #fff;
	border-color: #fff;
}

.transparent.header-sticky .is-sticky #masthead {
	z-index: 99 !important;
}

.transparent.header-sticky .is-sticky .header-top {
	background: #f1f5f8;
	border: none;
	color: #333333;
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	transition: all 0.5s ease;
}

.transparent.header-sticky .is-sticky .header-top .contact-info li,
.transparent.header-sticky .is-sticky .header-top .contact-info li span,
.transparent.header-sticky .is-sticky .logo-text,
.transparent.header-sticky .is-sticky .logo-text a,
.transparent.header-sticky .is-sticky #site-navigation ul li a,
.transparent.header-sticky .is-sticky #site-navigation ul.sub-menu li a,
.transparent.header-sticky .is-sticky .flash-cart-views a,
.transparent.header-sticky .is-sticky #site-navigation .menu-toggle .fa {
	color: #333333;
}
.transparent.header-sticky .is-sticky .header-bottom {
	background: #fff;
	border: none;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	transition: all 0.5s ease;
}

.transparent.header-sticky .is-sticky .flash-cart-views {
	border-color: #333333;
}

.transparent.header-sticky .is-sticky .search-icon {
	color: #333333;
	border-color: #333333;
}

.transparent.header-sticky .custom-logo,
.transparent.header-sticky .is-sticky .transparent-logo,
.transparent-logo,
.transparent .custom-logo {
	display: none;
}

.transparent.header-sticky .is-sticky .custom-logo,
.transparent.header-sticky .transparent-logo,
.transparent .transparent-logo {
	display: block;
}

#wp-custom-header-video {
	display: block;
	min-height: 300px;
	min-height: 75vh;
	width: 100%;
}

.wp-custom-header {
	position: relative;
	text-align: center;
}

.wp-custom-header-video-button {
	position: absolute;
	bottom: 0;
	left: 0;
}

/*--------------------------------------------------------------
Slider
--------------------------------------------------------------*/

.tg-slider-widget .swiper-button-next {
	background-image: unset;
	right: 0;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	transition: all 0.5s ease;
	width: 50px;
	height: 50px;
	visibility: hidden;
	opacity: 0;
}

.tg-slider-widget .swiper-button-next::before {
	content: "\f105";
	font-family: fontawesome;
	font-size: 30px;
	color: #313b48;
	background: #fff;
	width: 50px;
	height: 50px;
	line-height: 50px;
	text-align: center;
	display: block;
}

.tg-slider-widget .swiper-button-prev {
	background-image: unset;
	left: 0;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	transition: all 0.5s ease;
	width: 50px;
	height: 50px;
	visibility: hidden;
	opacity: 0;
}

.tg-slider-widget .swiper-button-prev::before {
	content: "\f104";
	font-family: fontawesome;
	font-size: 30px;
	color: #313b48;
	background: #fff;
	width: 50px;
	height: 50px;
	line-height: 50px;
	text-align: center;
	display: block;
}

.tg-slider-widget:hover .swiper-button-next {
	right: 30px;
	visibility: visible;
	opacity: 1;
}

.tg-slider-widget:hover .swiper-button-prev {
	left: 30px;
	visibility: visible;
	opacity: 1;
}

.tg-slider-widget:hover .swiper-button-next.swiper-button-disabled {
	opacity: 0.36;
}

.tg-slider-widget:hover .swiper-button-prev.swiper-button-disabled {
	opacity: 0.36;
}

.tg-slider-widget .swiper-wrapper {
	position: relative;
}

.tg-slider-widget .swiper-slide {
	width: 100% !important;
}

.tg-slider-widget .slider-content {
	text-align: center;
	position: absolute;
	top: 50%;
	left: 50%;
	width: 100%;
	-webkit-transform: translate(-50%, -50%);
	-moz-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	-o-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}

.tg-slider-widget .caption-title {
	color: #313b48;
	font-size: 48px;
	font-weight: 800;
	line-height: 1.5;
	text-transform: uppercase;
}
.tg-slider-widget.slider-light .caption-title {
	text-shadow: 1px 1px #ffffff;
}

.tg-slider-widget .caption-desc {
	font-size: 24px;
	line-height: 35px;
	margin: 10px 0 30px 0;
	text-transform: capitalize;
}
.tg-slider-widget.slider-light .caption-desc {
	text-shadow: 1px 1px #ffffff;
}

.tg-slider-widget .btn-wrapper {
	display: inline-block;
}

.tg-slider-widget .btn-wrapper a {
	border: 3px solid #313b48;
	display: inline-block;
	font-size: 20px;
	padding: 7px 26px;
}
.tg-slider-widget.slider-light .btn-wrapper a {
	text-shadow: 1px 1px #ffffff;
}

.tg-slider-widget .btn-wrapper a:hover {
	background: #313b48;
	color: #fff;
	border-color: #313b48;
}
.tg-slider-widget.slider-light .btn-wrapper a:hover {
	text-shadow: none;
}

.tg-slider-widget.slider-content-left .slider-content {
	text-align: left;
	left: 0;
	-webkit-transform: translateY(-50%);
	-moz-transform: translateY(-50%);
	-ms-transform: translateY(-50%);
	-o-transform: translateY(-50%);
	transform: translateY(-50%);
}

.tg-slider-widget.slider-content-left .caption-title {
	width: 60%;
}
/* ... */

